package modele.player;

public class HumanPlayer extends Player {
    public HumanPlayer() {
        super();
    }
}
